--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Pizza</title>
   </head>
   <body>
+    <h1> Ilove Pizza</h1>
   
   </body>
 </html>
